@@ -40,11 +40,14 @@ define( '_AM_TINYCFG_FORCEP', 'Forceer P elementen' );
 define( '_AM_TINYCFG_FORCEPDSC', 'Als de gekozen optie <i>Ja</i> is, dan zullen P elementen gegenereert worden bij aanslag van de Enter toets en BR elementen bij Shift+Enter toets.<br />Standaard: <i>ja</i>' );
 
 define( '_AM_TINYCFG_FORCEDRTBLCK', 'Forceer root blok' );
-define( '_AM_TINYCFG_FORCEDRTBLCKDSC', 'Met deze optie kuntt u ervoor zorgen dat alle niet blok elementen of tekstnodes zijn verpakt in blok-elementen.<br />Standaard: <i>p-tag</i>' );
+define( '_AM_TINYCFG_FORCEDRTBLCKDSC', 'Met deze optie kunt u ervoor zorgen dat alle niet blok elementen of tekstnodes zijn verpakt in blok-elementen.<br />Standaard: <i>p-tag</i>' );
 define( '_AM_TINYCFG_PTAG', 'p-tag' );
 
 define( '_AM_TINYCFG_SCHEMA', 'Schema' );
 define( '_AM_TINYCFG_SCHEMADSC', 'Deze optie laat u kiezen tussen HTML4 en HTML5 schema. Dit regelt de geldige elementen en attributen die kunnen worden geplaatst in de HTML. <br />Standaard: <i>HTML4</i>' );
+
+define( '_AM_TINYCFG_CONTENTCSS', 'Vul het pad in naar de CSS voor het beschrijfbare veld' );
+define( '_AM_TINYCFG_CONTENTCSSDSC', 'Deze optie stelt u in staat om een eigen CSS bestand te gebruiken. Dit CSS bestand wordt gebruikt voor het in te vullen deel van de editor.<br />Vul het pad als volgt in: <i>folder/folder/folder/tinymce_content.css</i> (dus zonder te beginnen met /).' );
 
 // Taakbalken
 define( '_AM_TINYCFG_TOOLSETS', 'Taakbalken' );
