@@ -13,7 +13,8 @@ CREATE TABLE `tinycfg_configs` (
 	`forcebr` varchar(128) NOT NULL default 'false',
 	`forcep` varchar(128) NOT NULL default 'true',
 	`forcedrootblock` varchar(128) NOT NULL default 'p',
-	`sschema` varchar(128) NOT NULL default 'html4'
+	`sschema` varchar(128) NOT NULL default 'html4',
+	`contentcss` varchar(128) NOT NULL default ''
 );
 
 INSERT INTO tinycfg_configs (verifyhtml,converturls,relativeurls,forcebr,forcep,forcedrootblock,sschema) VALUES ('false','false','false','false','true','p','html4');
